--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,46 @@
 <% layout('/layouts/boilerplate') -%>
   <body>
-    <h3>Listing Details :</h3>
-    <ul>
-      <li><%= listing.title %></li>
-      <li><%= listing.description %></li>
-      <li>&#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-      <li><%= listing.location %></li>
-      <li><%= listing.country %></li>
-    </ul>
-    <br />
-    <a href="/listings/<%= listing._id %>/edit">Edit this Listing</a>
-    <br /><br />
-    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button>Delete this listing</button>
-    </form>
+    <div class="row">
+      <div class="col-8 offset-2">
+        <h3>Listing Details :</h3>
+        <div class="card">
+          <img src="<%= listing.image.url%>" class="card-img-top show-image" alt="listing_image">
+          <div class="card-body">
+            <p class="card-text"><b><%= listing.title %></b></p>
+          </div>
+        </div>
+      
+        <ul>
+          <li><%= listing.description %></li>
+          <li>&#8377; <%= listing.price.toLocaleString("en-IN")  %> / night</li>
+          <li><%= listing.location %></li>
+          <li><%= listing.country %></li>
+        </ul>
+        <br />
+
+        <!-- <div class="btn button-container">
+          <a href="/listings/<%= listing._id %>/edit"><button class="submit-button">Edit this Listing</button></a>
+          
+          <br /><br />
+          
+          <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" class="d-inline">
+            <button type="submit" class="btn delete-button">Delete this Listing</button>
+          </form>
+        </div> -->
+
+        <div class="button-container">
+          <a href="/listings/<%= listing._id %>/edit" class="btn  submit-button">Edit this Listing</a>
+        
+          <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" class="d-inline">
+            <button type="submit" class="btn btn-warning delete-button">Delete this Listing</button>
+          </form>
+        </div>
+        
+    
+
+    
+      </div>
+    </div>
+    <br>
   </body>
 
