--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,30 +1,48 @@
 <% layout('/layouts/boilerplate') -%>
-  <body>
-    <h3>Create a New Listing</h3>
-    <form method="POST" action="/listings">
-      <input name="listing[title]" placeholder="enter title" type="text" />
-      <br /><br />
-      <textarea
-        name="listing[description]"
-        placeholder="enter description"
-      ></textarea>
-      <br /><br />
-      <input
-        name="listing[image]"
-        placeholder="enter image URL/Link"
-        type="text"
-      />
-      <br /><br />
-      <input name="listing[price]" placeholder="enter price" type="number" />
-      <br /><br />
-      <input name="listing[country]" placeholder="enter country" type="text" />
-      <br /><br />
-      <input
-        name="listing[location]"
-        placeholder="enter location"
-        type="text"
-      />
-      <br /><br />
-      <button>Add</button>
-    </form>
-  </body>
+<body>
+  <div class="row">
+     <div class="col-8 offset-2">
+      <h3>Create a New Listing</h3>
+      <form method="POST" action="/listings">
+        
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input name="listing[title]" placeholder="Enter title" type="text" id="title" class="form-control" />
+        </div>
+    
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea name="listing[description]" placeholder="Enter description" id="description" class="form-control"></textarea>
+        </div>
+    
+        <div class="mb-3">
+          <label for="image" class="form-label">Image URL</label>
+          <input name="listing[image]" placeholder="Enter image URL/Link" type="text" id="image" class="form-control" />
+        </div>
+  
+        <div class="row">
+          <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input name="listing[price]" placeholder="Enter price" type="number" id="price" class="form-control" />
+          </div>
+      
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input name="listing[country]" placeholder="Enter country" type="text" id="country" class="form-control" />
+          </div>
+        </div>
+
+
+    
+        <div class="mb-3">
+          <label for="location" class="form-label">Location</label>
+          <input name="listing[location]" placeholder="Enter location" type="text" id="location" class="form-control" />
+        </div>
+    
+        <button class="btn submit-button">Add</button>
+    
+      </form>
+     </div>
+  </div>
+  <br>
+</body>
