--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -40,6 +40,8 @@
         </div>
     
         <button class="btn submit-button">Add</button>
+
+        <button type="button" class="btn back-button" onclick="window.location.href='/listings'">Back</button>
     
       </form>
      </div>
