--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -30,6 +30,8 @@
 
         <div class="button-container">
           <a href="/listings/<%= listing._id %>/edit" class="btn  submit-button">Edit this Listing</a>
+
+          <button class="btn back-button" onclick="window.location.href='/listings'">Back</button>
         
           <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" class="d-inline">
             <button type="submit" class="btn btn-warning delete-button">Delete this Listing</button>
