--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -28,7 +28,7 @@
         <div class="row">
           <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input name="listing[price]" placeholder="Enter price" type="text" id="price" class="form-control"  />
+            <input name="listing[price]" placeholder="Enter price" type="number" id="price" class="form-control"  />
             <div class="valid-feedback">Great price!</div>
             <div class="invalid-feedback">Please enter a price.</div>
           </div>
