--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,14 +1,15 @@
-<% if(success && success.length) { %>
-    <div class="alert alert-success alert-dismissible fade show mt-3 " role="alert">
-        <%= success %>
+<% if (success && success.length) { %>
+    <div class="alert alert-success alert-dismissible fade show mt-3 shadow-sm rounded px-4 py-3" role="alert">
+        <i class="bi bi-check-circle-fill me-2"></i> 
+         <%= success %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
 
-
-<% if(error && error.length) { %>
-    <div class="alert alert-danger alert-dismissible fade show mt-3 " role="alert">
-        <%= error %>
+<% if (error && error.length) { %>
+    <div class="alert alert-danger alert-dismissible fade show mt-3 shadow-sm rounded px-4 py-3" role="alert">
+        <i class="bi bi-exclamation-triangle-fill me-2"></i> 
+        <strong>Oops!</strong> <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
