--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -20,7 +20,7 @@
                 <div class="invalid-feedback">Please enter a password.</div>
               </div>
 
-              <button class="btn btn-success">Signup</button>
+              <button class="btn btn-success">Login</button>
         </form>
      </div>
   </div>
