--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -11,6 +11,7 @@
         </div>
       
         <ul>
+          <li><b>Owned By : </b><%= listing.owner.username %></li>
           <li><%= listing.description %></li>
           <li>&#8377; <%= listing.price.toLocaleString("en-IN")  %> / night</li>
           <li><%= listing.location %></li>
@@ -28,49 +29,56 @@
           </form>
         </div> -->
 
+
         <div class="button-container">
-          <a href="/listings/<%= listing._id %>/edit" class="btn  submit-button">Edit this Listing</a>
-
-          <button class="btn back-button" onclick="window.location.href='/listings'">Back</button>
+          <% if (currUser && currUser._id.equals(listing.owner._id)) { %> 
+            <!-- This is for authorization -->  
+            <a href="/listings/<%= listing._id %>/edit" class="btn submit-button">Edit this Listing</a>
         
-          <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" class="d-inline">
-            <button type="submit" class="btn btn-warning delete-button">Delete this Listing</button>
-          </form>
+            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE" class="d-inline">
+              <button type="submit" class="btn btn-warning delete-button">Delete this Listing</button>
+            </form>
+          <% } %>
+        
+          <!-- Back button is always visible -->
+          <button class="btn back-button" onclick="window.location.href='/listings'">Back</button>
         </div>
-
+        
         <hr>
-        <div >
-          <h4>Leave a Review</h4>
-          <form action="/listings/<%= listing._id %>/reviews" method="post"  novalidate class="needs-validation">
-            <!-- <div>
-              <label for="rating" class="form-label"> Range</label>
-              <input type="range" name="review[rating]" class="form-range mb-3" min="1" max="5" id="rating">
-            </div> -->
-            <div>
-              <label for="rating" class="form-label">Rating</label>
-              <div class="stars">
+        <div>
+          <% if (currUser) { %>
+            <h4>Leave a Review</h4>
+            <form action="/listings/<%= listing._id %>/reviews" method="post" novalidate class="needs-validation">
+              <div>
+                <label for="rating" class="form-label">Rating</label>
+                <div class="stars">
                   <input type="radio" name="review[rating]" id="star5" value="5">
                   <label for="star5">★</label>
                   <input type="radio" name="review[rating]" id="star4" value="4">
                   <label for="star4">★</label>
-                  <input type="radio" name="review[rating]" id="star3" value="3" >
+                  <input type="radio" name="review[rating]" id="star3" value="3">
                   <label for="star3">★</label>
                   <input type="radio" name="review[rating]" id="star2" value="2">
                   <label for="star2">★</label>
                   <input type="radio" name="review[rating]" id="star1" value="1" checked>
                   <label for="star1">★</label>
+                </div>
               </div>
-          </div>
-            <div>
-              <label for="comment" class="form-label"></label>Comment</label>
-              <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control mb-3" required></textarea>
-              <div class="invalid-feedback mb-3">Please enter a comment.</div>
-            </div>
-            
-            <button type="submit" class="btn-outline-dark sbtn btn">Submit</button>
-          </form>
-
-          <hr>
+        
+              <div>
+                <label for="comment" class="form-label">Comment</label>
+                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control mb-3" required></textarea>
+                <div class="invalid-feedback mb-3">Please enter a comment.</div>
+              </div>
+        
+              <button type="submit" class="btn-outline-dark sbtn btn">Submit</button>
+            </form>
+        
+            <hr>
+        
+          <% } %>
+        </div>
+        
           <h4><b>All Reviews</b></h4>
 
           <div class="row">
@@ -79,7 +87,7 @@
           <% for(review of listing.reviews) { %>
             <div class="card mb-3  ms-3 col-5">
               <div class="card-body ">
-                <h5 class="card-title">Vamshi</h5>
+                <h5 class="card-title">@<%= review.author.username %></h5>
                 <p class="card-title"><%= review.comment %> </p>
                 <p class="card-title"><%= review.rating%>&#11088; </p>
               </div>
