Improvements in Index page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,7 @@ a{
 /* Navigation Link Styling */
 .nav-link {
     color: #222222 !important;
+    /* font-size: large; */
 }
 
 /* -------------------------------------------------------------------------- */
