--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,31 @@
+<style>
+  .search-btn{
+    background-color: #fe424d;
+    color: white;
+    border-radius: 25px;
+  }
+
+  .search-btn:hover{
+    background-color: #fe424d;
+    color: white;
+  }
+
+  .search-btn i {
+    display: inline;
+    margin-right: 0.5rem;
+  }
+
+  .search-input{
+    border-radius: 25px;
+    width: 300px;
+    padding: 0.5rem 3rem 0.5rem 6rem;
+    
+
+  }
+</style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
       <button 
        class="navbar-toggler"
        type="button" 
@@ -13,14 +38,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link "  href="/">Home</a>
-          <a class="nav-link" href="/listings">All Listings</a>
-          <a class="nav-link" href="/listings/new">Add New Listing</a>
+          
+          <a class="nav-link" href="/listings">Explore</a>
+          <a class="nav-link" href="/listings/new">Add Your Place</a>
         </div>
+
+        <div class="navbar-nav search ms-auto">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2 search-input" type="search" placeholder="Search destination" >
+            <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search </button>
+          </form>
+        </div>
+
         <div class="navbar-nav ms-auto">
           <% if (!currUser) { %>
-                <a class="nav-link "  href="/signup">Signup</a>
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link "  href="/signup"><b>Signup</b></a>
+                <a class="nav-link" href="/login"><b>Login</b></a>
          <% } %>
          <% if (currUser) { %>
           <a class="nav-link" href="/logout">Logout</a>
