--- a/views/listings/error.ejs
+++ b/views/listings/error.ejs
@@ -43,7 +43,7 @@
         <div class="error-code"><%= err.status %></div>
         <div class="error-message"><%= err.message %></div>
         <p class="error-description">The page you are looking for might have been removed, had its name changed, or is temporarily unavailable or you made any mistake.</p>
-        <a href="/listings" class="btn btn-danger mt-3">Go Back Home</a>
+        <a href="/" class="btn btn-danger mt-3">Go Back Home</a>
     </div>
 
 </body>
